# myjump

./: README.md  pyproject.toml
myjump/: cli.py
myjumpy/: jump_with_otp.py
