[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "gaopeng", email = "peng.gaoc@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyotp",
  "pexpect",
]
description = "Jump with OTP"
name = "myjumpy"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[project.scripts]
myjump = "myjumpy.jump_with_otp:main"


[tool.ruff]
line-length = 120
target-version = "py38"


