[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "myjump"
version = "0.1.0"
description = "Jump with OTP"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="GACLove", email="gaopeng@gaclove.com" },
]
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyotp",
    "pexpect; sys_platform != 'win32'", # pexpect 在 Windows 上不可用
]

[project.scripts]
myjump = "myjump.cli:main"


[tool.ruff]
line-length = 120
target-version = "py38"


