[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myjump"
version = "0.1.0"
description = "Jump with OTP"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="GACLove", email="gaopeng@gaclove.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
keywords = ["ssh", "otp", "jump", "server", "automation"]
dependencies = [
    "pyotp",
    "pexpect; sys_platform != 'win32'", # pexpect 在 Windows 上不可用
]

[project.scripts]
myjump = "myjump.cli:main"


[tool.ruff]
line-length = 120
target-version = "py38"


